--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,54 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+/* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
+:root.theme-dark {
+    /* ------------- font settings ------------- */
+   
+    --paragraph-font-weight: 465;
+    --header-font-weight: 785;
+
+    /* ----------------------------------------- */
+    /* ------------- color settings ------------- */
+
+    --backgroumnd-color: #000000;
+    --accent-color: #00CC14;
+
+    /* ------------------------------------------ */
+}
+/* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
+
+/* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
+:root.theme-light {
+    /* ------------- font settings ------------- */
+   
+    --paragraph-font-weight: 400;
+    --header-font-weight: 700;
+
+    /* ----------------------------------------- */
+    /* ------------- color settings ------------- */
+
+    --backgroumnd-color: #FFFFFF;
+    --accent-color: #000000;
+
+    /* ------------------------------------------ */
+}
+/* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
+
+  @media (prefers-color-scheme: dark) {
+    :root.theme-auto {
+        /* ------------- font settings ------------- */
+       
+        --paragraph-font-weight: 465;
+        --header-font-weight: 785;
+    
+        /* ----------------------------------------- */
+        /* ------------- color settings ------------- */
+    
+        --backgroumnd-color: #000000;
+        --accent-color: #00CC14;
+    
+        /* ------------------------------------------ */
+    }
+  }
