--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,25 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+/* В этом файле будут храниться все значения переменных в исходном состоянии,
+а так же их изменения в зависимости от ширины устройства */
+
+:root {
+
+    /* ------------- font settings ------------- */
+   
+    --main-font-family: 'Inter-Variable';
+    --accent-font-family: 'PressStart2P';
+
+    --paragraph-font-weight: 400;
+    --header-font-weight: 700;
+
+    /* ----------------------------------------- */
+
+
+
+    /* ------------- color settings ------------- */
+
+    --backgroumnd-color: #FFFFFF;
+    --accent-color: #000000;
+
+    /* ------------------------------------------ */
+
+}
