--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -4,7 +4,7 @@
     src:    local('Inter-Variable')
             url(./Inter-Variable.woff2) format('woff2 supports variations')
             url(./Inter-Variable.woff2) format('woff2-variations');
-    font-weight: normal;
+    font-weight: 400 785;
     font-display: swap;
   }
   
@@ -12,6 +12,6 @@
     font-family: 'PressStart2P';
     src:    local('PressStart2P-Regular')
             url(./PressStart2P-Regular.woff) format('woff');
-    font-weight: normal;
+    font-weight: 400;
     font-display: swap;
   }
