--- a/styles/themes.css
+++ b/styles/themes.css
@@ -6,13 +6,13 @@
 */
 
 /* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
+
 :root.theme-dark {
     /* ------------- font settings ------------- */
    
     --paragraph-font-weight: 465;
     --header-font-weight: 785;
 
-    /* ----------------------------------------- */
     /* ------------- color settings ------------- */
 
     --backgroumnd-color: #000000;
@@ -20,16 +20,15 @@
 
     /* ------------------------------------------ */
 }
-/* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
 
 /* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
+
 :root.theme-light {
-    /* ------------- font settings ------------- */
+    /* ------------- font settings -------------- */
    
     --paragraph-font-weight: 400;
     --header-font-weight: 700;
-
-    /* ----------------------------------------- */
+    
     /* ------------- color settings ------------- */
 
     --backgroumnd-color: #FFFFFF;
@@ -37,6 +36,7 @@
 
     /* ------------------------------------------ */
 }
+
 /* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
 
   @media (prefers-color-scheme: dark) {
@@ -45,8 +45,7 @@
        
         --paragraph-font-weight: 465;
         --header-font-weight: 785;
-    
-        /* ----------------------------------------- */
+        
         /* ------------- color settings ------------- */
     
         --backgroumnd-color: #000000;
@@ -55,3 +54,5 @@
         /* ------------------------------------------ */
     }
   }
+
+  /* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
